--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Cayetana Bazar & Deco</title>
+  <title>Karen Romero.PH</title>
 </head>
 
 <body>
